(feat): update to latest jEnv, NVM, Java and remove some defaults